compiler/PQASM.g4
grammar PQASM;

// -------------------------- Parser Rules ------------------------------------

program : 'ESKIP'
        | 'Next (' instr ')'
        | 'Had (' list ')'
        | 'New (' list ')'
        | 'ESeq (' program ') (' program ')'
        | 'Meas (' natOrVarname ') (' list ') (' program ')'
        | 'IFa (' cBoolExp ') (' program ') (' program ')'
        | instr;

instr : 'ISeq (' instr ') (' instr ')' 
      | 'ICU (' pos ') (' instr ')' 
      | 'Ora (' mu ')' 
      | 'Ry (' pos ') (' rot ')'
      | mu;

// OQASM arithmetic operations
mu : 'Add (' list ') (' natOrVarname ')'
   | 'Less (' list ') (' natOrVarname ') (' pos ')'
   | 'Equal (' list ') (' natOrVarname ') (' pos ')'
   | 'ModMult (' list ') (' natOrVarname ') (' natOrVarname ')'
   | 'Equal_posi_list (' list ') (' pos ')';

// Arithmetic expression
arithExp : 'BA (' VARNAME ')'       // 'BA' seems to be a variable literal
         | 'Num (' NAT ')'
         | 'APlus (' arithExp ') (' arithExp ')'
         | 'AMult (' arithExp ') (' arithExp ')'
         | natOrVarname;

// Classical boolean expression
cBoolExp : 'CEq (' arithExp ') (' arithExp ')'
         | 'CLt (' arithExp ') (' arithExp ')';


// Low Level

list : '['VARNAME']';

pos : natOrVarname; // Position (in a list)
rot : natOrVarname; // Rotation (this seems to be defined only as a NAT and not REAL?)

natOrVarname : NAT
             | VARNAME;

boolOrVarName : BOOL
              | VARNAME;


// -------------------------- Lexer Tokens ------------------------------------

ESKIP : 'eskip';

NAT : [0-9]+;

BOOL : 'true'
     | 'false'; // I'm not sure how booleans are even written in PQASM, this is a guess

VARNAME : [a-zA-Z_0-9]+; // Any combo of letters and numbers

WS : [ \t\r\n]+ -> skip; // ignore any whitespace
